--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@headlessui/react": "^2.1.2",
+    "@heroicons/react": "^2.1.5",
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
     "framer-motion": "^11.3.21",
